--- a/package.json
+++ b/package.json
@@ -20,8 +20,10 @@
     "@angular/platform-browser": "^15.0.0",
     "@angular/platform-browser-dynamic": "^15.0.0",
     "@angular/router": "^15.0.0",
+    "angular-fusioncharts": "^4.0.3",
     "angular-tabler-icons": "^2.7.0",
-    "apexcharts": "^3.35.3",
+    "apexcharts": "^3.41.0",
+    "fusioncharts": "^3.20.0",
     "gitignore": "^0.7.0",
     "ng-apexcharts": "1.7.1",
     "rxjs": "~7.5.0",
@@ -31,7 +33,7 @@
   },
   "devDependencies": {
     "@angular-devkit/build-angular": "^15.0.5",
-    "@angular/cli": "~15.0.5",
+    "@angular/cli": "^15.2.9",
     "@angular/compiler-cli": "^15.0.0",
     "@types/date-fns": "^2.6.0",
     "@types/jasmine": "~4.3.0",
