--- a/package.json
+++ b/package.json
@@ -16,16 +16,31 @@
     "@angular/compiler": "^15.0.0",
     "@angular/core": "^15.0.0",
     "@angular/forms": "^15.0.0",
+    "@angular/localize": "^15.0.0",
     "@angular/material": "^15.0.4",
     "@angular/platform-browser": "^15.0.0",
     "@angular/platform-browser-dynamic": "^15.0.0",
     "@angular/router": "^15.0.0",
+    "@progress/kendo-angular-charts": "^13.1.0",
+    "@progress/kendo-angular-common": "^13.1.0",
+    "@progress/kendo-angular-icons": "^13.1.0",
+    "@progress/kendo-angular-intl": "^13.1.0",
+    "@progress/kendo-angular-l10n": "^13.1.0",
+    "@progress/kendo-angular-navigation": "^13.1.0",
+    "@progress/kendo-angular-popup": "^13.1.0",
+    "@progress/kendo-drawing": "^1.17.5",
+    "@progress/kendo-licensing": "^1.3.1",
+    "@progress/kendo-theme-default": "^6.5.1",
+    "@progress/kendo-theme-material": "^6.5.1",
     "angular-fusioncharts": "^4.0.3",
     "angular-tabler-icons": "^2.7.0",
     "apexcharts": "^3.41.0",
+    "chart.js": "^4.3.0",
     "fusioncharts": "^3.20.0",
     "gitignore": "^0.7.0",
+    "hammerjs": "^2.0.8",
     "ng-apexcharts": "1.7.1",
+    "primeng": "^16.0.2",
     "rxjs": "~7.5.0",
     "sass": "^1.57.1",
     "tslib": "^2.3.0",
