--- a/package.json
+++ b/package.json
@@ -28,6 +28,7 @@
     "@progress/kendo-angular-l10n": "^13.1.0",
     "@progress/kendo-angular-navigation": "^13.1.0",
     "@progress/kendo-angular-popup": "^13.1.0",
+    "@progress/kendo-angular-tooltip": "^13.1.0",
     "@progress/kendo-drawing": "^1.17.5",
     "@progress/kendo-licensing": "^1.3.1",
     "@progress/kendo-theme-default": "^6.5.1",
