--- a/package.json
+++ b/package.json
@@ -25,6 +25,7 @@
     "apexcharts": "^3.41.0",
     "fusioncharts": "^3.20.0",
     "gitignore": "^0.7.0",
+    "jwt-decode": "^3.1.2",
     "ng-apexcharts": "1.7.1",
     "rxjs": "~7.5.0",
     "sass": "^1.57.1",
