--- a/package.json
+++ b/package.json
@@ -24,6 +24,7 @@
     "@angular/router": "^16.1.5",
     "@sentry/angular-ivy": "^7.58.0",
     "@sentry/cli": "^2.19.4",
+    "@swimlane/ngx-charts": "^20.4.1",
     "angular-fusioncharts": "^4.0.3",
     "angular-tabler-icons": "^2.7.0",
     "apexcharts": "^3.41.0",
@@ -31,7 +32,7 @@
     "fusioncharts": "^3.20.0",
     "gitignore": "^0.7.0",
     "jwt-decode": "^3.1.2",
-    "ng-apexcharts": "1.7.1",
+    "ng-apexcharts": "^1.7.1",
     "primeng": "^16.0.2",
     "rxjs": "~7.5.0",
     "sass": "^1.57.1",
