--- a/package.json
+++ b/package.json
@@ -32,6 +32,8 @@
     "fusioncharts": "^3.20.0",
     "gitignore": "^0.7.0",
     "jwt-decode": "^3.1.2",
+    "moment": "^2.29.4",
+    "moment-timezone": "^0.5.43",
     "ng-apexcharts": "^1.7.1",
     "primeng": "^16.0.2",
     "rxjs": "~7.5.0",
