--- a/.github/workflows/deploy_stint360-ui.yml
+++ b/.github/workflows/deploy_stint360-ui.yml
@@ -28,7 +28,7 @@ jobs:
       - name: npm install, build, and test
         run: |
           npm install
-          npm run build
+          ng build
           
       - name: Zip Artifacts
         run: zip release.zip ./* -r
