--- a/.github/workflows/deploy_stint360-ui.yml
+++ b/.github/workflows/deploy_stint360-ui.yml
@@ -28,6 +28,7 @@ jobs:
       - name: npm install, build, and test
         run: |
           npm install
+          npm install -g @angular/cli
           ng build
           
       - name: Zip Artifacts
