--- a/.github/workflows/deploy_stint360-ui.yml
+++ b/.github/workflows/deploy_stint360-ui.yml
@@ -6,7 +6,7 @@ on:
       - deploy
   workflow_dispatch:
 
-jobs:
+jobs: 
   build:
     runs-on: windows-latest
 
@@ -18,20 +18,25 @@ jobs:
         with:
           node-version: '18.x'
           
+      - name: Cache node modules
+        uses: actions/cache@v1
+        with:
+          path: ~/.npm
+          key: ${{ runner.os }}-node-${{ hashFiles('**/package-lock.json') }}
+          restore-keys: |
+            ${{ runner.os }}-node-
+            
       - name: Install NPM Modules
         run: npm install
 
       - name: Build Project
-        run: npm run build
-          
-      - name: Zip Artifacts
-        run: zip release.zip ./* -r
+        run: npm run build --prod
 
       - name: Upload artifact for deployment job
         uses: actions/upload-artifact@v2
         with:
           name: node-app
-          path: release.zip
+          path: .
 
   deploy:
     runs-on: ubuntu-latest
@@ -45,9 +50,6 @@ jobs:
         uses: actions/download-artifact@v2
         with:
           name: node-app
-          
-      - name: unzip artifacts
-        run: unzip release.zip
 
       - name: 'Deploy to Azure Web App'
         uses: azure/webapps-deploy@v2
