--- a/.github/workflows/deploy_stint36o.yml
+++ b/.github/workflows/deploy_stint36o.yml
@@ -14,35 +14,27 @@ on:
 #
 # 2. Change these variables for your configuration:
 env:
-  AZURE_WEBAPP_NAME: stint36o   # set this to your application's name
-  AZURE_WEBAPP_PACKAGE_PATH: './dist/Stint360-UI'      # set this to the path to your web app project, defaults to the repository root
+  AZURE_WEBAPP_NAME: stint36o    # set this to your application's name
+  AZURE_WEBAPP_PACKAGE_PATH: './dist/Stint360-UI'      # set this to the path to your web app project
   NODE_VERSION: '18.x'                # set this to the node version to use
 
 jobs:
   build-and-deploy:
     name: Build and Deploy
     runs-on: ubuntu-latest
-    environment: dev
     steps:
     - uses: actions/checkout@master
     - name: Use Node.js ${{ env.NODE_VERSION }}
       uses: actions/setup-node@v1
       with:
         node-version: ${{ env.NODE_VERSION }}
-    - name: npm install, build, and test
+    - name: npm install and build
       run: |
-        # Build and test the project, then
-        # deploy to Azure Web App.
-        npm prune --production
         npm install
-        npm run build --if-present
-        # npm run test --if-present
+        npm run build -- --prod
     - name: 'Deploy to Azure WebApp'
-      uses: azure/webapps-deploy@v2
+      uses: azure/webapps-deploy@v1
       with: 
         app-name: ${{ env.AZURE_WEBAPP_NAME }}
         publish-profile: ${{ secrets.AZURE_WEBAPP_PUBLISH_PROFILE }}
         package: ${{ env.AZURE_WEBAPP_PACKAGE_PATH }}
-        
-  # For more information on GitHub Actions for Azure, refer to https://github.com/Azure/Actions
-  # For more samples to get started with GitHub Action workflows to deploy to Azure, refer to https://github.com/Azure/actions-workflow-samples
